Add new resume entries